adding login screen styles

--- a/purchase_list_csharp/Views/Login/Index.cshtml
+++ b/purchase_list_csharp/Views/Login/Index.cshtml
@@ -7,6 +7,8 @@
 @using (Html.BeginForm())
 {
     <div class="login-container">
+
+        <img src="~/images/user-solid.svg" alt="user" class="img-responsive" width="100px" />
         <div class="login-entry">
             <p>Login</p>
             <input />
@@ -16,9 +18,12 @@
             <input type="password" />
         </div>
 
-        <button id="login-button">Entrar</button>
+        <button id="login-button">
+            Entrar
+        </button>
+
         <div>
-            <a>Esqueci minha senha</a>
+            <a>Esqueci minha senhaa</a>
         </div>
     </div>
 }
