--- a/purchase_list_csharp/wwwroot/css/login.css
+++ b/purchase_list_csharp/wwwroot/css/login.css
@@ -3,11 +3,12 @@
 div.login-container {
     background-color: white;
     width: 300px;
-    height: 300px;
+    height: 350px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 10px, rgba(0, 0, 0, 0.23) 0px 3px 10px;
     text-align: center;
+    margin-top: 30px;
+    display: inline-block;
 }
-
 
 
 div.login-entry {
@@ -23,7 +24,7 @@ div.login-entry {
     margin-right: 20px;
 }
 
-.login-container button {
+#login-button {
     width: calc(100% - 40px);
     background-color: #4CAF50; /* Green */
     border: none;
