--- a/purchase_list_csharp/Views/Shared/_Layout.cshtml
+++ b/purchase_list_csharp/Views/Shared/_Layout.cshtml
@@ -33,13 +33,18 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">purchase_list_csharp</a>
+                        <a asp-area="" asp-controller="PurchaseList" asp-action="Index" class="navbar-brand">Listas de compra</a>
                     </div>
-                    <div class="navbar-collapse collapse">
+                    <div class="navbar-collapse collapse" style="display: flex !important; justify-content: space-between">
                         <ul class="nav navbar-nav">
-                            <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                            <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                            <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                            <li><a asp-area="" asp-controller="Purchase" asp-action="Index">Compras</a></li>
+                            <li><a asp-area="" asp-controller="Product" asp-action="Index">Produtos</a></li>
+                            <li><a asp-area="" asp-controller="User" asp-action="Index">Usuários</a></li>
+                            <li><a asp-area="" asp-controller="About" asp-action="Index">Sobre</a></li>
+                        </ul>
+                        <div></div>
+                        <ul class="nav navbar-nav">
+                            <li><a asp-area="" asp-controller="Login" asp-action="Logout">Sair</a></li>
                         </ul>
                     </div>
                 </div>
