init products development

--- a/purchase_list_csharp/Views/Shared/_Layout.cshtml
+++ b/purchase_list_csharp/Views/Shared/_Layout.cshtml
@@ -37,9 +37,9 @@
                     </div>
                     <div class="navbar-collapse collapse" style="display: flex !important; justify-content: space-between">
                         <ul class="nav navbar-nav">
-                            <li><a asp-area="" asp-controller="Purchase" asp-action="Index">Compras</a></li>
-                            <li><a asp-area="" asp-controller="Product" asp-action="Index">Produtos</a></li>
-                            <li><a asp-area="" asp-controller="User" asp-action="Index">Usuários</a></li>
+                            <li><a asp-area="" asp-controller="Purchases" asp-action="Index">Compras</a></li>
+                            <li><a asp-area="" asp-controller="Products" asp-action="Index">Produtos</a></li>
+                            <li><a asp-area="" asp-controller="Users" asp-action="Index">Usuários</a></li>
                             <li><a asp-area="" asp-controller="About" asp-action="Index">Sobre</a></li>
                         </ul>
                         <div></div>
