--- a/purchase_list_csharp/Views/Products/_ProductDialog.cshtml
+++ b/purchase_list_csharp/Views/Products/_ProductDialog.cshtml
@@ -37,6 +37,10 @@
                     <label class="control-label">Modified At</label>
                     <input class="form-control" disabled />
                 </div>
+
+                <div id="product-dialog-loading" style="width: 100%; text-align: center; display: none">
+                    <div class="loader"></div>
+                </div>
             </div>
 
             <div class="modal-footer">
